fix: input: min width of form to prevent button overflow on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@
   justify-content: space-between;
   gap: 5px;
   max-width: 500px;
+  min-width: 338px;
 }
 
 #knowledge-input {
